--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,19 @@ services:
       - db
     volumes:
       - .:/app
-      - /app/vendor
     environment:
       - DB_HOST=db
       - DB_USER=postgres
       - DB_PASSWORD=postgres
       - DB_NAME=taxi
       - POSTGRES_DB=postgres
+
       - AIR_ENV=development
+
       - GO_ENV=development
       - AIR_CONF=.air.toml
+
+      - JWT_SECRET_KEY="SX"
 
   db:
     image: postgres:15
