--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: .
     container_name: go-web
-    command: air
+    command: air serve
     ports:
       - "8080:8080"
     depends_on:
